<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>coherepedia-jv</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-bom</artifactId>
                <version>2.25ea59</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-vector</artifactId>
            <version>16.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-netty</artifactId>
            <version>16.1.0</version>
        </dependency>

        <dependency>
            <groupId>io.github.jbellis</groupId>
            <artifactId>jvector</artifactId>
            <version>3.0.0-beta.10</version>
        </dependency>

        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>chronicle-map</artifactId>
        </dependency>

        <dependency>
            <groupId>com.cohere</groupId>
            <artifactId>cohere-java</artifactId>
            <version>1.0.4</version>
        </dependency>

        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-core</artifactId>
            <version>2.9.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <executable>${java.home}/bin/java</executable>
                </configuration>
                <executions>
                    <execution>
                        <id>buildindex</id>
                        <configuration>
                            <arguments>
                                <argument>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</argument>
                                <argument>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argument>
                                <argument>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argument>
                                <argument>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</argument>
                                <argument>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
                                <argument>--add-modules=jdk.incubator.vector</argument>
                                <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
                                <argument>-Xlog:gc=info:gc.log:time</argument>
                                <argument>-Xmx40G</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>io.github.jbellis.BuildIndex</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>serve</id>
                        <configuration>
                            <arguments>
                                <argument>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</argument>
                                <argument>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argument>
                                <argument>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argument>
                                <argument>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</argument>
                                <argument>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
                                <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
                                <argument>--add-modules=jdk.incubator.vector</argument>
                                <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
                                <argument>-Xlog:gc=info:gc.log:time</argument>
                                <argument>-Xmx4G</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>io.github.jbellis.WebSearch</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
